# english_quotes

./: .gitignore  Cargo.toml  README.md  db.json  export.md  types.txt
.github/workflows/: rust.yml
src/: chars.rs  db.rs  lib.rs  main.rs  multiple_state.rs  quote.rs  quote_type.rs  rendering.rs  theme.rs  util.rs
src/egui/: eq_app.rs  main.rs  utility.rs
src/tui/: db.rs  events.rs  main.rs  multiple_state.rs  rendering.rs
src/utils/: either.rs  events.rs  exports.rs  mod.rs  render.rs
